--- a/Frontend/src/app/MOHComponents/pregnancy-form/pregnancy-form.component.html
+++ b/Frontend/src/app/MOHComponents/pregnancy-form/pregnancy-form.component.html
@@ -191,7 +191,7 @@
                       </div>
                       <div class="col-md-3">
                          <mat-form-field class="example-full-width">
-                             <input matInput placeholder="{{'pregm.distance_to_mothers_workplace(km)' | translate}}" type= "number" formControlName="distance_to_mothers_workplace" >
+                             <input matInput placeholder="{{'pregm.distance_to_mothers_workplace(km)' | translate}}" type= "number" formControlName="distance_to_mothers_workplace" min="0">
                            </mat-form-field>
                       </div>
                       <div class="col-md-3">
@@ -781,28 +781,28 @@
                                              <div class="col-md-2">
                                                <td>
                                                    <mat-form-field class="example-full-width">
-                                                       <input matInput placeholder="" type= "number" formControlName="g1_bron_weight">
+                                                       <input matInput placeholder="" type= "number" formControlName="g1_bron_weight" min="0" >
                                                      </mat-form-field>
                                                </td>
                                              </div>
                                              <div class="col-md-2">
                                                <td>
                                                    <mat-form-field class="example-full-width">
-                                                       <input matInput placeholder="" type= "number" formControlName="g2_bron_weight">
+                                                       <input matInput placeholder="" type= "number" formControlName="g2_bron_weight" min="0">
                                                      </mat-form-field>
                                                </td>
                                              </div>
                                              <div class="col-md-2">
                                                <td>
                                                    <mat-form-field class="example-full-width">
-                                                       <input matInput placeholder="" type= "number" formControlName="g3_bron_weight">
+                                                       <input matInput placeholder="" type= "number" formControlName="g3_bron_weight" min="0">
                                                      </mat-form-field>
                                                </td>
                                              </div>
                                              <div class="col-md-2">
                                                <td>
                                                    <mat-form-field class="example-full-width">
-                                                       <input matInput placeholder="" type= "number" formControlName="g4_bron_weight">
+                                                       <input matInput placeholder="" type= "number" formControlName="g4_bron_weight" min="0">
                                                      </mat-form-field>
                                                </td>
                                              </div>
@@ -1042,28 +1042,28 @@
                                          <div class="col-md-2">
                                            <td>
                                                <mat-form-field class="example-full-width">
-                                                   <input matInput placeholder="" type= "number" formControlName="day1_pregnancy_weeks">
+                                                   <input matInput placeholder="" type= "number" formControlName="day1_pregnancy_weeks" min="0">
                                                  </mat-form-field>
                                            </td>
                                          </div>
                                          <div class="col-md-2">
                                            <td>
                                                <mat-form-field class="example-full-width">
-                                                   <input matInput placeholder="" type= "number" formControlName="day2_pregnancy_weeks">
+                                                   <input matInput placeholder="" type= "number" formControlName="day2_pregnancy_weeks" min="0">
                                                  </mat-form-field>
                                            </td>
                                          </div>
                                          <div class="col-md-2">
                                            <td>
                                                <mat-form-field class="example-full-width">
-                                                   <input matInput placeholder="" type= "number" formControlName="day3_pregnancy_weeks">
+                                                   <input matInput placeholder="" type= "number" formControlName="day3_pregnancy_weeks" min="0">
                                                  </mat-form-field>
                                            </td>
                                          </div>
                                          <div class="col-md-2">
                                            <td>
                                                <mat-form-field class="example-full-width">
-                                                   <input matInput placeholder="" type= "number" formControlName="day4_pregnancy_weeks">
+                                                   <input matInput placeholder="" type= "number" formControlName="day4_pregnancy_weeks" min="0">
                                                  </mat-form-field>
                                            </td>
                                          </div>
@@ -1141,28 +1141,28 @@
                                                <div class="col-md-2">
                                                  <td>
                                                      <mat-form-field class="example-full-width">
-                                                         <input matInput placeholder="" type= "number" formControlName="day1_embryo_height">
+                                                         <input matInput placeholder="" type= "number" formControlName="day1_embryo_height" min="0">
                                                        </mat-form-field>
                                                  </td>
                                                </div>
                                                <div class="col-md-2">
                                                  <td>
                                                      <mat-form-field class="example-full-width">
-                                                         <input matInput placeholder="" type= "number" formControlName="day2_embryo_height">
+                                                         <input matInput placeholder="" type= "number" formControlName="day2_embryo_height" min="0">
                                                        </mat-form-field>
                                                  </td>
                                                </div>
                                                <div class="col-md-2">
                                                  <td>
                                                      <mat-form-field class="example-full-width">
-                                                         <input matInput placeholder="" type= "number" formControlName="day3_embryo_height">
+                                                         <input matInput placeholder="" type= "number" formControlName="day3_embryo_height" min="0">
                                                        </mat-form-field>
                                                  </td>
                                                </div>
                                                <div class="col-md-2">
                                                  <td>
                                                      <mat-form-field class="example-full-width">
-                                                         <input matInput placeholder="" type= "number" formControlName="day4_embryo_height">
+                                                         <input matInput placeholder="" type= "number" formControlName="day4_embryo_height" min="0">
                                                        </mat-form-field>
                                                  </td>
                                                </div>
@@ -1544,28 +1544,28 @@
                                        <div class="col-md-2">
                                          <td>
                                              <mat-form-field class="example-full-width">
-                                                 <input matInput placeholder="" type= "number" formControlName="day1_weight">
+                                                 <input matInput placeholder="" type= "number" formControlName="day1_weight" min="0">
                                                </mat-form-field>
                                          </td>
                                        </div>
                                        <div class="col-md-2">
                                          <td>
                                              <mat-form-field class="example-full-width">
-                                                 <input matInput placeholder="" type= "number" formControlName="day2_weight">
+                                                 <input matInput placeholder="" type= "number" formControlName="day2_weight" min="0">
                                                </mat-form-field>
                                          </td>
                                        </div>
                                        <div class="col-md-2">
                                          <td>
                                              <mat-form-field class="example-full-width">
-                                                 <input matInput placeholder="" type= "number" formControlName="day3_weight">
+                                                 <input matInput placeholder="" type= "number" formControlName="day3_weight" min="0">
                                                </mat-form-field>
                                          </td>
                                        </div>
                                        <div class="col-md-2">
                                           <td>
                                              <mat-form-field class="example-full-width">
-                                                 <input matInput placeholder="" type= "number" formControlName="day4_weight">
+                                                 <input matInput placeholder="" type= "number" formControlName="day4_weight" min="0">
                                                </mat-form-field>
                                           </td>
                                        </div>
