add mother baby joined

--- a/Frontend/src/app/MOHComponents/view-babyby-id/view-babyby-id.component.html
+++ b/Frontend/src/app/MOHComponents/view-babyby-id/view-babyby-id.component.html
@@ -107,14 +107,14 @@
                                               </div>
                                         </mat-form-field>
                                 </div>
-                                <div class="col-md-2">
+                                <!--<div class="col-md-2">
                                         <mat-form-field class="example-full-width">
                                             <input matInput placeholder="{{ 'motherBabyJoined.registration_category' | translate }}" type= "text" readonly="{{onChange()}}" formControlName="registration_category">
                                             <div *ngIf="submitted && addmotherbabyForm.controls.registration_category.errors" class="error">
                                                 <div *ngIf="addmotherbabyForm.controls.registration_category.errors.required">This field is required</div>
                                               </div>
                                         </mat-form-field>
-                                </div>
+                                </div> -->
                         </div>
                         </mat-expansion-panel>
                         <mat-expansion-panel>
