--- a/Frontend/src/app/MOHComponents/addmotherbabyjoineddata/addmotherbabyjoineddata.component.html
+++ b/Frontend/src/app/MOHComponents/addmotherbabyjoineddata/addmotherbabyjoineddata.component.html
@@ -12,7 +12,7 @@
                         <div class="row">
                             <div class="col-md-3">
                                     <mat-form-field class="example-full-width">
-                                        <input matInput placeholder="{{ 'motherBabyJoined.mother_id' | translate }}" type= "text" formControlName="mother_id">
+                                        <input matInput placeholder="{{ 'motherBabyJoined.mother_id' | translate }}" type= "text" formControlName="mother_id" readonly>
                                         <div *ngIf="submitted && addmotherbabyForm.controls.mother_id.errors" class="error">
                                             <div *ngIf="addmotherbabyForm.controls.mother_id.errors.required">This field is required</div>
                                           </div>
@@ -47,7 +47,7 @@
                         <div class="row">
                             <div class="col-md-3">
                                 <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="{{ 'motherBabyJoined.mothers_name' | translate }}" type= "text" formControlName="mothers_name">
+                                    <input matInput placeholder="{{ 'motherBabyJoined.mothers_name' | translate }}" type= "text" formControlName="mothers_name" readonly>
                                     <div *ngIf="submitted && addmotherbabyForm.controls.mothers_name.errors" class="error">
                                         <div *ngIf="addmotherbabyForm.controls.mothers_name.errors.required">This field is required</div>
                                       </div>
@@ -55,7 +55,7 @@
                             </div>
                             <div class="col-md-5">
                                     <mat-form-field class="example-full-width">
-                                        <input matInput placeholder="{{ 'motherBabyJoined.address' | translate }}" type= "text" formControlName="address">
+                                        <input matInput placeholder="{{ 'motherBabyJoined.address' | translate }}" type= "text" formControlName="address" readonly>
                                         <div *ngIf="submitted && addmotherbabyForm.controls.address.errors" class="error">
                                             <div *ngIf="addmotherbabyForm.controls.address.errors.required">This field is required</div>
                                           </div>
@@ -93,20 +93,20 @@
                         <div class="row">
                                 <div class="col-md-2">
                                         <mat-form-field class="example-full-width">
-                                            <input matInput placeholder="{{ 'motherBabyJoined.registration_date' | translate }}" type= "date" formControlName="registration_date">
+                                            <input matInput placeholder="{{ 'motherBabyJoined.registration_date' | translate }}" type= "date" formControlName="registration_date" readonly>
                                             <div *ngIf="submitted && addmotherbabyForm.controls.registration_date.errors" class="error">
                                                 <div *ngIf="addmotherbabyForm.controls.registration_date.errors.required">This field is required</div>
                                               </div>
                                         </mat-form-field>
                                 </div>
-                                <div class="col-md-2">
+                               <!--<div class="col-md-2">
                                         <mat-form-field class="example-full-width">
                                             <input matInput placeholder="{{ 'motherBabyJoined.registration_category' | translate }}" type= "text" formControlName="registration_category">
-                                            <!-- <div *ngIf="submitted && addmotherbabyForm.controls.registration_category.errors" class="error">
+                                             <div *ngIf="submitted && addmotherbabyForm.controls.registration_category.errors" class="error">
                                                 <div *ngIf="addmotherbabyForm.controls.registration_category.errors.required">This field is required</div>
-                                              </div> -->
+                                              </div> 
                                         </mat-form-field>
-                                </div>
+                                </div> -->
                         </div>
                     </mat-expansion-panel>
                     <mat-expansion-panel>
