--- a/Frontend/src/app/MOHComponents/view-babiesof-area/view-babiesof-area.component.html
+++ b/Frontend/src/app/MOHComponents/view-babiesof-area/view-babiesof-area.component.html
@@ -5,8 +5,20 @@
     <div class="row">
             
             <div class="col-md-4"></div>
-            <div class="col-md-5"><h3></h3></div>
+            <div class="col-md-2"><h3></h3></div>
             <div class="col-md-3"> <a routerLink="AddMotherBabyJoined" class="btn btn-info btn-block">{{'motherBabyJoined.fill'| translate }}</a></div>
+            <div class="col-md-3">
+                <button class="btn btn-info btn-block" mat-button [matMenuTriggerFor]="menu">{{ 'family.generateReports' | translate }}</button>
+                <mat-menu #menu="matMenu">
+        
+                    <a mat-menu-item [matMenuTriggerFor]="ViewImmunizationReport">Immunization Reports</a>
+                    </mat-menu>
+                    <mat-menu #ViewImmunizationReport="matMenu">
+                      <a mat-menu-item routerLink="ViewImmunizationReport/2020" >2020</a>
+                      <a mat-menu-item routerLink="ViewImmunizationReport/2019">2019</a>
+                      <a mat-menu-item routerLink="ViewImmunizationReport/2018">2018</a>
+                  </mat-menu>
+            </div>
         </div>
       <div class="row">
           <div class="col-md-12">
