--- a/Frontend/src/app/specialAttention/main/main.component.html
+++ b/Frontend/src/app/specialAttention/main/main.component.html
@@ -11,33 +11,52 @@
                 <h5 class="card-category"></h5>
             </div>
             <div class="card-body">
-              <div class="col-md-3">
-                <button class="btn btn-info btn-block" mat-button [matMenuTriggerFor]="menu">View Low Weight Babies</button>
-                          <mat-menu #menu="matMenu">
-                          <!--<button mat-menu-item>Current Users of M. Contra. Methods</button>-->
-                          <a mat-menu-item [matMenuTriggerFor]="firstYear">First Year</a>
-                          <a mat-menu-item  [matMenuTriggerFor]="secondYear">Second Year</a>
-                          <a mat-menu-item [matMenuTriggerFor]="thirdYear">Third Year</a>
+              <div class="row">
+                <div class="col-md-4">
+                      <button class="btn btn-info btn-block" mat-button [matMenuTriggerFor]="menu">View Low Weight Babies</button>
+                            <mat-menu #menu="matMenu">
+                          
+                            <a mat-menu-item [matMenuTriggerFor]="firstYear">First Year</a>
+                            <a mat-menu-item  [matMenuTriggerFor]="secondYear">Second Year</a>
+                            <a mat-menu-item [matMenuTriggerFor]="thirdYear">Third Year</a>
 
-                          <!--<button mat-menu-item>Contraceptive Prevalence</button>-->
-                          </mat-menu>
-                          <mat-menu #firstYear="matMenu">
-                              <a mat-menu-item routerLink="lowWeightBabies/first_yearone" >After One Month</a>
-                              <a mat-menu-item routerLink="lowWeightBabies/first_yearsix">After 06 Months</a>
-                              <a mat-menu-item routerLink="lowWeightBabies/first_yeartwelve">After 12 Months</a>
-                          </mat-menu>
+                           
+                            </mat-menu>
+                            <mat-menu #firstYear="matMenu">
+                                <a mat-menu-item routerLink="lowWeightBabies/first_yearone" >After One Month</a>
+                                <a mat-menu-item routerLink="lowWeightBabies/first_yearsix">After 06 Months</a>
+                                <a mat-menu-item routerLink="lowWeightBabies/first_yeartwelve">After 12 Months</a>
+                            </mat-menu>
 
-                          <mat-menu #secondYear="matMenu">
-                              <a mat-menu-item routerLink="lowWeightBabies/sec_yearsix"> After 18 Months</a>
-                              <a mat-menu-item routerLink="lowWeightBabies/sec_yeartwelve">After 24 Months</a>
+                            <mat-menu #secondYear="matMenu">
+                                <a mat-menu-item routerLink="lowWeightBabies/sec_yearsix"> After 18 Months</a>
+                                <a mat-menu-item routerLink="lowWeightBabies/sec_yeartwelve">After 24 Months</a>
 
-                          </mat-menu>
-                          <mat-menu #thirdYear="matMenu">
-                              <a mat-menu-item routerLink="lowWeightBabies/third_yeartwelve">After 36 Months</a>
-                              
+                            </mat-menu>
+                            <mat-menu #thirdYear="matMenu">
+                                <a mat-menu-item routerLink="lowWeightBabies/third_yeartwelve">After 36 Months</a>
+                                
 
-                          </mat-menu>
-                        </div>
+                            </mat-menu>
+                </div>
+                <div class="col-md-5">
+                        <button class="btn btn-info btn-block" mat-button [matMenuTriggerFor]="menu">Babies Who Have Eye Problems</button>
+                            <mat-menu #menu="matMenu">
+                            
+                            <a mat-menu-item routerLink="eyeProblems/impairedMovements">Impaired Eye Movements</a>
+                            <a mat-menu-item  [matMenuTriggerFor]="eyeSightProblems">Eye Sight Problems</a>
+                            <a mat-menu-item routerLink="eyeProblems/bitoSpots">Bito Spots</a>
+
+                            
+                            </mat-menu>
+                            <mat-menu #eyeSightProblems="matMenu">
+                                <a mat-menu-item routerLink="eyeProblems/leftSightProblem" >Left Eye Sight Problems</a>
+                                <a mat-menu-item routerLink="eyeProblems/RightSightProblem">Right Eye Sight Problems</a>
+                            </mat-menu>
+
+                          
+                </div>
+            </div>
           </div>
          </div>
       <div class="col-md-12"></div>
