snack bar for add weight height form

--- a/Frontend/src/app/MOHComponents/add-weight-height/add-weight-height.component.html
+++ b/Frontend/src/app/MOHComponents/add-weight-height/add-weight-height.component.html
@@ -53,7 +53,7 @@
                                     </div>
                                 </mat-form-field>
                           </div>
-                          <div class="col-md-3">
+                         <!-- <div class="col-md-3">
                             <mat-form-field class="example-full-width">
                                 <input matInput placeholder="{{'weightHeight.bathch_no'| translate}}" type="text" formControlName="batch_no">
                                 <div *ngIf="submitted && WeightHeightForm.controls.batch_no.errors" class="error">
@@ -61,7 +61,7 @@
                                   </div>
                               </mat-form-field>
                         </div>
-                          
+                          -->
                         </div>
                        
                         <div class="row">
