snack bar for view weight height by id

--- a/Frontend/src/app/MOHComponents/view-weight-by-id/view-weight-by-id.component.html
+++ b/Frontend/src/app/MOHComponents/view-weight-by-id/view-weight-by-id.component.html
@@ -34,6 +34,7 @@
                                   </div>
                               </mat-form-field>
                         </div>
+                        <!--
                         <div class="col-md-4">
                             <mat-form-field class="example-full-width">
                                 <input matInput placeholder="{{'weightHeight.sex'| translate}}" type="text" readonly="{{onChange()}}" formControlName="Gender">
@@ -41,7 +42,7 @@
                                     <div *ngIf="WeightHeightForm.controls.sex.errors.required">This field is required</div>
                                   </div>
                               </mat-form-field>
-                          </div>
+                          </div> -->
                       </div>
                       <mat-expansion-panel>
                         <mat-expansion-panel-header>
@@ -61,7 +62,7 @@
                                   </div>
                               </mat-form-field>
                         </div>
-                        
+                        <!--
                         <div class="col-md-3">
                             <mat-form-field class="example-full-width">
                                 <input matInput placeholder="{{'weightHeight.bathch_no'| translate}}" type="text" readonly="{{onChange()}}" formControlName="batch_no">
@@ -69,7 +70,7 @@
                                     <div *ngIf="WeightHeightForm.controls.batch_no.errors.required">This field is required</div>
                                   </div>
                               </mat-form-field>
-                        </div>
+                        </div> -->
                       </div>
                      
                       <div class="row">
