--- a/Frontend/src/app/MOHComponents/view-mother-by-id/view-mother-by-id.component.html
+++ b/Frontend/src/app/MOHComponents/view-mother-by-id/view-mother-by-id.component.html
@@ -62,6 +62,7 @@
                               </mat-panel-description>
                             </mat-expansion-panel-header>     
                             <div class="row">
+                                <!--
                                 <div class="col-md-3">
                                     <mat-form-field class="example-full-width">
                                         <input matInput placeholder="{{'mother.registration_no'| translate}}" type="text"readonly="{{onChange()}}" formControlName="registration_no">
@@ -77,13 +78,11 @@
                                             <div *ngIf="addMotherSchema.controls.registration_date.errors.required">This field is required</div>
                                         </div>
                                     </mat-form-field>
-                            </div>
+                            </div> -->
                                   <div class="col-md-5">
                                           <mat-form-field class="example-full-width">
                                               <input matInput placeholder="{{'mother.address'| translate}}" type="text" readonly="{{onChange()}}" formControlName="address">
-                                              <div *ngIf="submit && addMotherSchema.controls.address.errors" class="error">
-                                                  <div *ngIf="addMotherSchema.controls.address.errors.required">This field is required</div>
-                                              </div>
+                                              
                                           </mat-form-field>
                                   </div>
                                   <div class="col-md-2">
@@ -107,9 +106,7 @@
                                   <div class="col-md-2">
                                           <mat-form-field class="example-full-width">
                                               <input matInput placeholder="{{'mother.gravidity'| translate}}" type="number" readonly="{{onChange()}}" formControlName="gravidity" min="0">
-                                              <div *ngIf="submit && addMotherSchema.controls.gravidity.errors" class="error">
-                                                      <div *ngIf="addMotherSchema.controls.gravidity.errors.required">This field is required</div>
-                                                    </div>
+                                              
                                           </mat-form-field>
                                   </div>
                                   <div class="col-md-2">
