--- a/Frontend/src/app/Graphs/contraceptive-prevalance/contraceptive-prevalance.component.html
+++ b/Frontend/src/app/Graphs/contraceptive-prevalance/contraceptive-prevalance.component.html
@@ -4,8 +4,8 @@
     
       <div class="row">
           <div class="col-md-12">
-            
-              <div class="card">
+            <div class="col-md-3" ><button (click)="saveToPdf()" class="btn btn-info btn-block">Export As PDF</button></div>
+              <div class="card" id="element-to-export">
                 <div class="card-header">
                     <h4 class="card-title "><h3>Contraceptive Methods</h3></h4>
                     
