--- a/Frontend/src/app/Graphs/modern-contraceptive-methods/modern-contraceptive-methods.component.html
+++ b/Frontend/src/app/Graphs/modern-contraceptive-methods/modern-contraceptive-methods.component.html
@@ -1,6 +1,7 @@
 <div class="main-content">
   <div class="container-fluid">
-      <div class="row">
+    <div class="col-md-3" ><button (click)="saveToPdf()" class="btn btn-info btn-block">Export As PDF</button></div>
+      <div class="row" id="element-to-export">
           <div class="col-md-12">
               <div class="card">
                 <div class="card-header">
