--- a/Frontend/src/app/reg-mother/reg-mother.component.scss
+++ b/Frontend/src/app/reg-mother/reg-mother.component.scss
@@ -1,5 +1,6 @@
 .mat-card {
-    width: 400px;
+    width: 600px;
+    height: 500px;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius:10px;
 }
