--- a/Frontend/src/app/MOHComponents/view-babyby-id/view-babyby-id.component.html
+++ b/Frontend/src/app/MOHComponents/view-babyby-id/view-babyby-id.component.html
@@ -2,10 +2,13 @@
 
   <div class="container-fluid">
     <div class="row">
-        <div class="col-md-6"></div>
+        <div class="col-md-2"></div>
         <div class="col-md-2">
             <mat-slide-toggle  [formControl]="autoRenew" (change)="onChange()">{{'edit'| translate}}</mat-slide-toggle>
         </div>
+        <div class="col-md-4">
+            <button  (click)="goToWeightHeight()" class="btn btn-info btn-block">View Weight Height Details<i class="material-icons">menu_book</i></button>
+         </div>
         <div class="col-md-4">
             <button  (click)="goToBabyBook()" class="btn btn-info btn-block">{{'motherBabyJoined.book'| translate}} <i class="material-icons">menu_book</i></button>
          </div>
