--- a/Frontend/src/app/MOHComponents/view-mothers/view-mothers.component.html
+++ b/Frontend/src/app/MOHComponents/view-mothers/view-mothers.component.html
@@ -4,7 +4,10 @@
  
 
   <div class="row">
-    <div class="col-md-3" ><a routerLink="addMother" class="btn btn-info btn-block">{{'mother.form'| translate }}</a></div>
+    <div class="col-md-3" ><!--
+      <a routerLink="addMother" class="btn btn-info btn-block">{{'mother.form'| translate }}</a>
+    -->
+    </div>
     <div class="col-md-6"></div>
     <div class="col-md-3">
       <button class="btn btn-info btn-block" mat-button [matMenuTriggerFor]="menu">{{ 'family.generateReports' | translate }}</button>
