Reg Mother System Improved

--- a/Frontend/src/app/reg-mother/reg-mother.component.html
+++ b/Frontend/src/app/reg-mother/reg-mother.component.html
@@ -39,7 +39,7 @@
             </div>
             
 
-            <button mat-raised-button color="primary" [disabled]="!regMotherForm.valid" type="submit">Login</button>
+            <button mat-raised-button color="primary" [disabled]="!regMotherForm.valid" type="submit">Register Mother</button>
 
         </form>
     </div>
