--- a/Frontend/src/app/MOHComponents/add-approved-families/add-approved-families.component.html
+++ b/Frontend/src/app/MOHComponents/add-approved-families/add-approved-families.component.html
@@ -275,7 +275,7 @@
                           </div>
                       </div>
                       </mat-expansion-panel>
-                      <input type="submit" value="{{ 'enter' | translate }}" class="btn btn-danger pull-right">
+                      <input type="submit" value="{{ 'enter' | translate }}" class="btn btn-info pull-right">
                       
                       </form>
                       
