add mother component

--- a/Frontend/src/app/MOHComponents/add-mother/add-mother.component.html
+++ b/Frontend/src/app/MOHComponents/add-mother/add-mother.component.html
@@ -40,6 +40,7 @@
                           </mat-panel-description>
                         </mat-expansion-panel-header> 
                     <div class="row">
+                        <!--
                         <div class="col-md-3">
                             <mat-form-field class="example-full-width">
                                 <input matInput placeholder="{{'mother.registration_no'| translate}}" type="text"formControlName="registration_no">
@@ -47,7 +48,7 @@
                                     <div *ngIf="addMotherSchema.controls.registration_no.errors.required">This field is required</div>
                                 </div>
                             </mat-form-field>
-                    </div>
+                    </div> -->
                     <div class="col-md-3">
                         <mat-form-field class="example-full-width">
                             <input matInput placeholder="{{'mother.registration_date'| translate}}" type="date" formControlName="registration_date">
